# operation-floresta

./: .gitignore  GEDI-search.ipynb  LICENSE  README.md  UpperXingu_data.ipynb  awscli.ipynb  danwei_meaned_test_data.csv  danwei_meaned_training_data.csv  decision_tree_model.pkl  dw_prediction_results.csv  dw_test.ipynb  main.py  meaned_training_data.csv  openai_reasoning.ipynb  opentopography.py  pyproject.toml  train.ipynb  train_decision_tree.ipynb  train_rf.ipynb
Datapreprocess/: GEE_all_features.ipynb
data/: Filtered_Upper_Xingu_Candidates__50_pts_.csv  UpperXingu_test.csv  dw_cleaned_test.csv  model_dataset_info.json  openai_analysis.txt  test_UpperXingu.csv  test_UpperXingu_start.csv  training_data.csv
data/final_datasets/: UpperXingu_test_with_allfeatures.csv  allfeatures_train_dataset.csv  clean_training_data.csv  clean_traininng_data.csv  final.csv
data/riverdist/: xingu_major1_utm.shp  xingu_major2_utm.shp
misc/: final.csv  history.md  sentinelhub.ipynb  test_random_forest.ipynb
misc/Datapreprocess/: GEE_features.ipynb  water_distance.py
output/: AOI_my_interactive_map.html  whole_interactive_map.html
