[project]
name = "operation-floresta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli>=1.40.35",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "rasterio>=1.4.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
